# scirs

./: .gitignore  ALPHA5_IMPLEMENTATION_PLAN.md  ALPHA6_ROADMAP.md  BETA1_RELEASE_SUMMARY.md  CI_OPTIMIZATION.md  CLAUDE.md  COMPILATION_STATUS_REPORT.md  CONCRETE_EXAMPLE_OPTIMIZE.md  CORE_MODULE_FIX_STRATEGY.md  CORE_USAGE_POLICY.md  Cargo.toml  INTERPOLATE_FIXES_SUMMARY.md  MIGRATION_GUIDE.md  NAN_INF_CHECK_REPORT.md  PRACTICAL_MIGRATION_STEPS.md  PRODUCTION_FIXES_SUMMARY.md  PRODUCTION_READINESS_PROGRESS.md  README.md  RELEASE_NOTES.md  TECHNICAL_DEBT_REPORT.md  TODO.md  TODO_FIXES_BATCH3.md  TODO_FIXES_CONTINUATION.md  TODO_FIXES_SUMMARY.md  UNIFIED_OPTIMIZATION_SUMMARY.md  build-optimization-guide.md  build.rs  scirs2-core_safe_ops_template.rs  scirs2-core_unwrap_report.md  test_advanced_basic.rs  test_basinhopping_bounds.rs  test_features_demo.rs  test_parallel_imports.rs  test_ultrathink  test_ultrathink_basic.rs  test_ultrathink_compilation.rs  unwrap_report.md  validate_rq.rs
scirs2-cluster/: ADVANCED_BENCHMARKING.md  Cargo.toml  README.md  TODO.md  quick_test.rs  test_advanced_basic.rs  test_matrix_sizes.rs  test_ultrathink_basic.rs  ultrathink_validation_report.md  validate_advanced_implementation.rs  validate_ultrathink_implementation  validate_ultrathink_implementation.rs
scirs2-cluster/benches/: clustering_benchmarks.rs
scirs2-cluster/examples/: advanced_benchmarking_demo.rs  advanced_features_demo.rs  advanced_test.rs  advanced_visualization_demo.rs  all_algorithms_test.rs  animated_kmeans_demo.rs  auto_tuning_demo.rs  birch_demo.rs  cluster_advanced_features_demo.rs  cluster_advanced_visualization_demo.rs  cluster_comprehensive_advanced_demo.rs  cluster_comprehensive_ultrathink_demo.rs  cluster_gpu_acceleration_demo.rs  comprehensive_hyperparameter_tuning_demo.rs  custom_distance_metrics_demo.rs  dbscan_demo.rs  deep_advanced_demo.rs  deep_ultrathink_demo.rs  dendrogram_plotting_demo.rs  enhanced_serialization_demo.rs  ensemble_clustering_demo.rs  evaluation_demo.rs  evaluation_metrics_demo.rs  gmm_demo.rs  gpu_distributed_advanced_demo.rs  gpu_distributed_ultrathink_demo.rs  hdbscan_demo.rs  hierarchical_demo.rs  kmeans2_demo.rs  kmeans2_scipy_compat.rs  kmeans_demo.rs  leader_demo.rs  meanshift_demo.rs  meanshift_demo_improved.rs  minibatch_kmeans_demo.rs  native_plotting_demo.rs  optics_demo.rs  parallel_hierarchical_demo.rs  parallel_kmeans_demo.rs  quantum_annealing_demo.rs  (+8 more)
scirs2-cluster/src/: advanced.rs  advanced_benchmarking.rs  advanced_clustering.rs  advanced_visualization.rs  birch.rs  distributed.rs  enhanced_clustering_features.rs  ensemble.rs  error.rs  gmm.rs  gpu.rs  gpu_distributed_clustering.rs  graph.rs  input_validation.rs  leader.rs  lib.rs  native_plotting.rs  neighbor_search.rs  plotting.rs  property_tests.rs  python_bindings.rs  quantum_clustering.rs  serialization.rs  sparse.rs  stability.rs  streaming.rs  tests.rs  text_clustering.rs  time_series.rs  tuning.rs  ultrathink_clustering.rs  ultrathink_enhanced_features.rs  ultrathink_gpu_distributed.rs  ultrathink_native_plotting.rs  visualization.rs  vq.rs  (+2 more)
scirs2-core/: Cargo.toml  KNOWN_ISSUES.md  MIGRATION_GUIDE_1.0.md  README.md  TEST_COVERAGE_ANALYSIS.md  TODO.md  fix_format_calls.sh  frozen_api_report.md  full_build.txt  lib.rs  platform_validation_report_linux_x86_64.md  simple_ultrathink_test.rs  test_simple.rs  test_ultrathink_simple.rs  verify_features.rs  verify_ultrathink.rs
scirs2-datasets/: Cargo.toml  README.md  TODO.md  debug_ndarray_methods.rs  test_method_resolution.rs
scirs2-graph/: API_STABILITY_COMPLETED.md  API_STABILITY_FINAL_REVIEW.md  API_STABILITY_REVIEW.md  BENCHMARKING_ENHANCEMENT_SUMMARY.md  CROSS_PLATFORM_BUILD_GUIDE.md  Cargo.toml  IMPLEMENTATION_STATUS_FINAL.md  LARGE_GRAPH_STRESS_TESTING_VALIDATION.md  MEMORY_OPTIMIZATION_REPORT.md  MEMORY_OPTIMIZATION_VALIDATION.md  NUMERICAL_ACCURACY_VALIDATION_FINAL.md  NUMERICAL_VALIDATION_SUMMARY.md  README.md  STRESS_TESTING_SUMMARY.md  TODO.md  ULTRATHINK_MODE_COMPLETION_SUMMARY.md
scirs2-io/: Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md  TODO.md  ULTRATHINK_IMPLEMENTATION_COMPLETION.md  ULTRATHINK_MODE_SUMMARY.md  compressed_data.h5
scirs2-ndimage/: Cargo.toml  README.md  TODO.md  debug_generic_filter.rs  debug_padding.rs
scirs2-optim/: Cargo.toml  README.md  SECURITY_IMPLEMENTATION_SUMMARY.md  TODO.md  build.rs  check_optim_error_imports.py  detailed_optim_error_report.py  performance_analysis_report.md  security_audit_report.md  validate_advanced.rs  validate_advanced_comprehensive.rs  validate_ultrathink.rs  validate_ultrathink_comprehensive.rs
scirs2-optimize/: Cargo.toml  README.md  TODO.md  baseline_performance.txt  cargo_warnings.txt  compilation_output.txt  extract_unused_imports.py
scirs2-series/: Cargo.toml  LINEAR_ALGEBRA_MIGRATION.md  README.md  TODO.md
scirs2-spatial/: BENCHMARKING.md  BENCHMARK_SUITE_SUMMARY.md  BENCHMARK_SUMMARY.md  Cargo.toml  PERFORMANCE_ANALYSIS.md  README.md  TODO.md  test_boolean_ops.rs  test_debug  test_halfspace_simple  test_line_math  test_self_intersection  test_spherical
scirs2-special/: ADVANCED_ASYMPTOTIC_METHODS.md  ADVANCED_MATHEMATICAL_DERIVATIONS.md  API_REFERENCE.md  Cargo.toml  ERROR_HANDLING_GUIDE.md  IMPLEMENTATION_COMPLETION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  MATHEMATICAL_FOUNDATIONS.md  README.md  TODO.md  ULTRATHINK_MODE_COMPLETION_SUMMARY.md  benchmark_results.csv  benchmark_results.txt  enhanced_advanced_benchmark.rs  enhanced_ultrathink_benchmark.rs  fix_all_double_underscores.sh  fix_all_underscores.rs  fix_all_underscores.sh  fix_double_underscores.rs  fix_underscores.py  spatial_modules_test.rs  test_dawson_improvements.rs  test_new_functions.rs  test_new_implementations.rs  test_polygamma_fix.rs  validate_advanced_improvements.rs  validate_ultrathink_improvements.rs
scirs2-stats/: Cargo.toml  ERROR_RECOVERY_GUIDE.md  IMPLEMENTATION_SUMMARY.md  README.md  ULTRATHINK_ENHANCEMENTS_SUMMARY.md  ULTRATHINK_MODE_IMPLEMENTATION_SUMMARY.md  compilation_test.rs  fix_display_traits.py
scirs2-transform/: Cargo.toml  README.md  TODO.md
(+4330 files in other folders)
