[package]
name = "scirs2-cluster"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Clustering algorithms module for SciRS2 (scirs2-cluster)"
license.workspace = true
repository.workspace = true
keywords = ["clustering", "scientific", "scipy", "numerical", "kmeans"]
categories = ["science", "mathematics", "algorithms"]

[dependencies]
# Core dependencies
scirs2-core = { workspace = true, features = ["parallel", "simd"] }
scirs2-spatial = { workspace = true }
scirs2-linalg = { workspace = true }
scirs2-stats = { workspace = true }
ndarray = { workspace = true }
# BLAS dependencies removed - using core abstractions
# ndarray-linalg = { workspace = true }
num-traits = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
approx = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
proptest = "1.4.0"
criterion = { version = "0.5", features = ["html_reports"] }

[features]
default = []

[[bench]]
name = "clustering_benchmarks"
harness = false
