[package]
name = "scirs2-cluster"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Clustering algorithms module for SciRS2 (scirs2-cluster)"
license.workspace = true
repository.workspace = true
keywords = ["clustering", "scientific", "scipy", "numerical", "kmeans"]
categories = ["science", "mathematics", "algorithms"]

[dependencies]
# Core dependencies
scirs2-core = { workspace = true, features = ["parallel", "simd"] }
scirs2-spatial = { workspace = true }
scirs2-linalg = { workspace = true }
scirs2-stats = { workspace = true }
ndarray = { workspace = true }
# BLAS dependencies removed - using core abstractions
# ndarray-linalg = { workspace = true }
num-traits = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
approx = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
flate2 = "1.0"

# Optional serialization formats
serde_yaml = { version = "0.9", optional = true }
rmp-serde = { version = "1.1", optional = true }
serde_cbor = { version = "0.11", optional = true }

# Temporary file handling
tempfile = "3.8"

# Archive handling for batch operations
tar = "0.4"

[dev-dependencies]
proptest = "1.4.0"
criterion = { version = "0.5", features = ["html_reports"] }

[features]
default = ["json", "binary"]
json = []
binary = []
yaml = ["serde_yaml"]
msgpack = ["rmp-serde"]
cbor = ["serde_cbor"]
all_formats = ["yaml", "msgpack", "cbor"]

# GPU acceleration features
gpu = []
cuda = ["gpu"]
opencl = ["gpu"]
rocm = ["gpu"]
metal = ["gpu"]
oneapi = ["gpu"]
gpu_all = ["cuda", "opencl", "rocm", "metal", "oneapi"]

[[bench]]
name = "clustering_benchmarks"
harness = false
