[package]
name = "scirs2-cluster"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Clustering algorithms module for SciRS2 (scirs2-cluster)"
license.workspace = true
repository.workspace = true
keywords = ["clustering", "scientific", "scipy", "numerical", "kmeans"]
categories = ["science", "mathematics", "algorithms"]

[dependencies]
# Core dependencies
scirs2-core = { workspace = true, features = ["parallel", "simd"] }
scirs2-spatial = { workspace = true }
scirs2-linalg = { workspace = true }
scirs2-stats = { workspace = true }
ndarray = { workspace = true }
# BLAS dependencies removed - using core abstractions
# ndarray-linalg = { workspace = true }
num-traits = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
approx = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
flate2 = "1.0"

# Optional serialization formats
serde_yaml = { version = "0.9", optional = true }
rmp-serde = { version = "1.1", optional = true }
serde_cbor = { version = "0.11", optional = true }

# Optional compression algorithms
lz4 = { version = "1.24", optional = true }
zstd = { version = "0.12", optional = true }
bzip2 = { version = "0.4", optional = true }

# Temporary file handling
tempfile = "3.8"

# Archive handling for batch operations
tar = "0.4"

# UUID generation for model versioning
uuid = { version = "1.0", features = ["v4"] }

# Optional Python bindings
pyo3 = { workspace = true, optional = true }
numpy = { workspace = true, optional = true }

# Optional visualization libraries
plotters = { version = "0.3", optional = true }
egui = { version = "0.27", optional = true }
eframe = { version = "0.27", optional = true }

[dev-dependencies]
proptest = "1.4.0"
criterion = { version = "0.5", features = ["html_reports"] }

[features]
default = ["json", "binary"]
json = []
binary = []
yaml = ["serde_yaml"]
msgpack = ["rmp-serde"]
cbor = ["serde_cbor"]
all_formats = ["yaml", "msgpack", "cbor"]

# Compression features
lz4_compression = ["lz4"]
zstd_compression = ["zstd"]
bzip2_compression = ["bzip2"]
all_compression = ["lz4_compression", "zstd_compression", "bzip2_compression"]

# GPU acceleration features
gpu = []
cuda = ["gpu"]
opencl = ["gpu"]
rocm = ["gpu"]
metal = ["gpu"]
oneapi = ["gpu"]
gpu_all = ["cuda", "opencl", "rocm", "metal", "oneapi"]

# Python bindings feature
pyo3 = ["dep:pyo3", "dep:numpy"]

# Visualization features
plotters = ["dep:plotters"]
egui = ["dep:egui", "dep:eframe"]
visualization = ["plotters", "egui"]

[[bench]]
name = "clustering_benchmarks"
harness = false
