[package]
name = "scirs2-graph"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Graph processing module for SciRS2 (scirs2-graph)"
license.workspace = true
repository.workspace = true
keywords = ["graph", "network", "scientific", "ai", "machine-learning"]
categories = ["science", "mathematics", "algorithms"]

[dependencies]
# Core dependencies
scirs2-core = { workspace = true, features = ["parallel"] }
scirs2-sparse = { workspace = true }
ndarray = { workspace = true }
num-traits = { workspace = true }
num-complex = { workspace = true }
thiserror = { workspace = true }
# Temporarily commenting out OpenBLAS to fix build issues
# openblas-src = { workspace = true }
# blas = { workspace = true }

# Graph processing specific dependencies
petgraph = { workspace = true }
rand = { workspace = true }
itertools = "0.13"
ordered-float = "3.9"

# Performance dependencies
# rayon = "1.8"  # Now use scirs2-core parallel abstractions
parking_lot = "0.12"

# Serialization for attributes and embeddings
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
bincode = "1.3"

[dev-dependencies]
tempfile = "3.8"
criterion = { version = "0.5", features = ["html_reports"] }
num_cpus = "1.16"

[features]
default = []

[[example]]
name = "graph_demo"
path = "examples/graph_demo.rs"

[[example]]
name = "refactor_demo"
path = "examples/refactor_demo.rs"

[[example]]
name = "hypergraph_demo"
path = "examples/hypergraph_demo.rs"

[[bench]]
name = "graph_benchmarks"
harness = false

[[bench]]
name = "memory_benchmarks"
harness = false

[[bench]]
name = "large_graph_stress"
harness = false

[[bench]]
name = "advanced_algorithms"
harness = false

[[bench]]
name = "performance_optimizations"
harness = false

[[bench]]
name = "benchmark_runner"
harness = false
