[package]
name = "scirs2-io"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Input/Output utilities module for SciRS2 (scirs2-io)"
license.workspace = true
repository.workspace = true
keywords = ["io", "serialization", "data", "scientific", "scipy"]
categories = ["science", "encoding"]

[dependencies]
ndarray = { workspace = true }
scirs2-core = { workspace = true, features = ["parallel", "simd", "gpu"] }
byteorder = { workspace = true }
image = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
rmp-serde = { workspace = true }
flate2 = { workspace = true }
lz4 = { workspace = true }
zstd = { workspace = true }
bzip2 = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
crc32fast = { workspace = true }
blake3 = { workspace = true }
hex = { workspace = true }
digest = { workspace = true }
data-encoding = { workspace = true }
chrono = { workspace = true }
tempfile = { workspace = true }
num-complex = { workspace = true }
regex = { workspace = true }
glob = { workspace = true }
netcdf3 = { workspace = true }
kamadak-exif = { workspace = true }
hdf5 = { workspace = true, optional = true }
# rayon = { workspace = true }  # Now use scirs2-core parallel abstractions
thiserror = { workspace = true }
tokio = { workspace = true, optional = true, features = ["fs", "io-util", "time", "rt"] }
futures = { workspace = true, optional = true }
futures-util = { workspace = true, optional = true }
log = { workspace = true, optional = true }
async-trait = { workspace = true, optional = true }
memmap2 = { workspace = true }
bytemuck = { workspace = true }
reqwest = { workspace = true, optional = true }
num_cpus = { workspace = true }
indexmap = { version = "2.7", features = ["serde"] }
serde_yaml = { workspace = true }
toml = { workspace = true }
num-traits = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
urlencoding = { workspace = true }
crossbeam-channel = { workspace = true }
cron = "0.12"
# Database drivers
rusqlite = { version = "0.31", optional = true }
sqlx = { version = "0.7", optional = true, features = ["runtime-tokio-rustls", "postgres", "mysql", "sqlite"] }
duckdb = { version = "0.10", optional = true }
mongodb = { version = "2.8", optional = true }
redis = { version = "0.24", optional = true }

[dev-dependencies]
tokio-test = { workspace = true }

[features]
default = ["csv", "compression", "validation"]
csv = []
compression = []
validation = []
hdf5 = ["dep:hdf5"]
async = ["dep:tokio", "dep:futures", "dep:futures-util", "dep:async-trait"]
reqwest = ["dep:reqwest", "dep:log"]
aws-sdk-s3 = []
google-cloud-storage = []
azure-storage-blobs = []
gpu = []
exif = []
# Database features
sqlite = ["dep:rusqlite"]
postgres = ["dep:sqlx", "async"]
mysql = ["dep:sqlx", "async"]
duckdb = ["dep:duckdb"]
mongodb = ["dep:mongodb", "async"]
redis = ["dep:redis"]
database = ["sqlite", "postgres", "mysql", "duckdb"]
all = ["csv", "compression", "validation", "hdf5", "async", "reqwest", "aws-sdk-s3", "google-cloud-storage", "azure-storage-blobs", "gpu", "exif", "database", "mongodb", "redis"]

[[example]]
name = "hdf5_example"
path = "examples/hdf5_example.rs"
required-features = ["hdf5"]

[[example]]
name = "async_io_example"
path = "examples/async_io_example.rs"
required-features = ["async"]

[[example]]
name = "network_cloud_example"
path = "examples/network_cloud_example.rs"
required-features = ["async", "reqwest"]
