[package]
name = "scirs2-ndimage"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "N-dimensional image processing module for SciRS2 (scirs2-ndimage)"
license.workspace = true
repository.workspace = true
keywords = ["image", "processing", "scientific", "scipy", "numerical"]
categories = ["science", "mathematics", "algorithms"]

[dependencies]
# Core dependencies
scirs2-core = { workspace = true, features = ["validation"] }
scirs2-interpolate = { workspace = true }
scirs2-fft = { workspace = true }
ndarray = { workspace = true }
num-traits = { workspace = true }
num-complex = { workspace = true }
thiserror = { workspace = true }
ndarray-rand = { workspace = true }
approx = { workspace = true }
cached = { workspace = true }

[features]
default = []
simd = ["scirs2-core/simd"]
parallel = ["scirs2-core/parallel"]

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "filters_bench"
harness = false

[[bench]]
name = "morphology_bench"
harness = false

[[bench]]
name = "interpolation_bench"
harness = false

[[bench]]
name = "distance_transform_bench"
harness = false
