[package]
name = "scirs2-optim"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Machine Learning optimization module for SciRS2 (scirs2-optim)"
license.workspace = true
repository.workspace = true
keywords = ["optimization", "machine-learning", "scientific", "sgd", "adam"]
categories = ["science", "mathematics", "algorithms"]
build = "build.rs"

[dependencies]
# Core dependencies
scirs2-core = { workspace = true }
scirs2-linalg = { workspace = true }
# scirs2-optimize = { workspace = true }
scirs2-metrics = { workspace = true, optional = true, features = ["neural_common", "optim_integration"] }
ndarray = { workspace = true }
ndarray-rand = { workspace = true }
num-traits = { workspace = true }
num-complex = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
sha2 = { workspace = true }
num_cpus = "1.16"
rand_chacha = "0.3"
rayon = "1.8"

[dev-dependencies]
plotters = { workspace = true }
approx = { workspace = true }

[features]
default = []
# GPU acceleration support
gpu = ["scirs2-core/gpu"]
# Temporarily removed optim_integration to avoid circular dependency
metrics_integration = ["dep:scirs2-metrics", "scirs2-metrics/optim_integration"]
