[package]
name = "scirs2-optim"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Machine Learning optimization module for SciRS2 (scirs2-optim)"
license.workspace = true
repository.workspace = true
keywords = ["optimization", "machine-learning", "scientific", "sgd", "adam"]
categories = ["science", "mathematics", "algorithms"]
build = "build.rs"

[dependencies]
# Core dependencies
scirs2-core = { workspace = true }
scirs2-linalg = { workspace = true }
# scirs2-optimize = { workspace = true }
scirs2-metrics = { workspace = true, optional = true, features = ["neural_common", "optim_integration"] }
ndarray = { workspace = true }
ndarray-rand = { workspace = true }
num-traits = { workspace = true }
num-complex = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
sha2 = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { version = "0.9" }
num_cpus = { workspace = true }
rand_chacha = "0.3"
uuid = { version = "1.6", features = ["v4", "serde"] }
futures = { version = "0.3", features = ["executor"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }
regex = "1.10"
tokio = { version = "1.0", features = ["full"] }
rsa = { version = "0.9", optional = true }

[[bin]]
name = "performance_regression_tester"
path = "src/bin/performance_regression_tester.rs"

[[bin]]
name = "memory_leak_reporter"
path = "src/bin/memory_leak_reporter.rs"

[[bin]]
name = "stress_test_analyzer"
path = "src/bin/stress_test_analyzer.rs"

[[bin]]
name = "longrun_analyzer"
path = "src/bin/longrun_analyzer.rs"

[[bin]]
name = "memory_pattern_analyzer"
path = "src/bin/memory_pattern_analyzer.rs"

[[bin]]
name = "performance-regression-detector"
path = "src/bin/performance_regression_detector.rs"

[[bin]]
name = "performance-baseline-manager"
path = "src/bin/performance_baseline_manager.rs"

[[bin]]
name = "security-audit-scanner"
path = "src/bin/security_audit_scanner.rs"

[[bin]]
name = "dependency-vulnerability-scanner"
path = "src/bin/dependency_vulnerability_scanner.rs"


[dev-dependencies]
plotters = { workspace = true }
approx = { workspace = true }
tempfile = "3"

[features]
default = []
# GPU acceleration support
gpu = ["scirs2-core/gpu"]
# Cryptographic functionality for plugin security
crypto = ["dep:rsa"]
# Temporarily removed optim_integration to avoid circular dependency
metrics_integration = ["dep:scirs2-metrics", "scirs2-metrics/optim_integration"]
