[package]
name = "scirs2-optimize"
version = "0.1.0-alpha.5"
edition = "2021"
authors = ["SciRS2 Team"]
description = "Optimization module for SciRS2"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cool-japan/scirs"
keywords = ["optimization", "minimize", "scientific", "scipy", "numerical"]
categories = ["science", "mathematics", "algorithms"]

[dependencies]
# Core dependencies
scirs2-core = { workspace = true }
scirs2-linalg = { workspace = true }
ndarray = { workspace = true }
num-traits = { workspace = true }
num-complex = { workspace = true }
thiserror = { workspace = true }
# BLAS dependencies handled through scirs2-core

# Optimization specific dependencies
argmin = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
rayon = { workspace = true }
friedrich = { workspace = true }
scirs2-sparse = { workspace = true }
ndarray-linalg = { workspace = true }

# Async dependencies (optional)
tokio = { workspace = true, optional = true }
futures = { workspace = true, optional = true }

[features]
default = []
async = ["tokio", "futures"]

[dev-dependencies]
approx = { workspace = true }
criterion = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[[example]]
name = "global_optimization"
path = "examples/global_optimization.rs"

[[example]]
name = "sparse_numerical_differentiation"
path = "examples/sparse_numerical_differentiation.rs"

[[example]]
name = "powell_example"
path = "examples/powell_example.rs"

[[example]]
name = "scalar_optimization"
path = "examples/scalar_optimization.rs"

[[example]]
name = "comprehensive_benchmark"
path = "examples/comprehensive_benchmark.rs"

[[example]]
name = "async_parallel_optimization"
path = "examples/async_parallel_optimization.rs"
required-features = ["async"]

[[example]]
name = "multi_objective_optimization"
path = "examples/multi_objective_optimization.rs"

[[example]]
name = "jit_optimization"
path = "examples/jit_optimization.rs"

[[example]]
name = "interior_point_example"
path = "examples/interior_point_example.rs"

[[example]]
name = "efficient_sparse_example"
path = "examples/efficient_sparse_example.rs"

[[example]]
name = "robust_convergence_example"
path = "examples/robust_convergence_example.rs"

[[example]]
name = "automatic_differentiation_example"
path = "examples/automatic_differentiation_example.rs"

