[package]
name = "scirs2-series"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Time series analysis module for SciRS2 (scirs2-series)"
license.workspace = true
repository.workspace = true
keywords = ["time-series", "forecasting", "scientific", "ai", "machine-learning"]
categories = ["science", "mathematics", "algorithms"]

[dependencies]
# Core dependencies
scirs2-core = { workspace = true, features = ["linalg"] }
scirs2-linalg = { workspace = true }
# scirs2-stats = { workspace = true } # Temporarily commented out due to compilation issues
scirs2-fft = { workspace = true }
ndarray = { workspace = true }
# BLAS dependencies removed - using core abstractions
# ndarray-linalg = { workspace = true, features = ["openblas-system"] }
# openblas-src = { workspace = true }
num-traits = { workspace = true }
num-complex = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
memmap2 = "0.9"
num_cpus = "1.16"

# WASM dependencies
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", features = ["console"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

# PyO3 for Python bindings
pyo3 = { workspace = true, optional = true }
numpy = { workspace = true, optional = true }

# Future dependency for PandRS with appropriate abstractions
# pandrs_wrapper = { path = "../wrappers/pandrs_wrapper", optional = true }

[dev-dependencies]
approx = { workspace = true }
tempfile = "3.8"
criterion = { version = "0.5", features = ["html_reports"] }

[features]
default = []
# Serialization support
serde = ["dep:serde"]
# Enable external ML library wrappers
# pandrs = ["dep:pandrs_wrapper"]
# WASM support for browser-based time series analysis
wasm = ["dep:wasm-bindgen", "dep:wasm-bindgen-futures", "dep:js-sys", "dep:web-sys", "serde", "dep:serde_json", "dep:serde-wasm-bindgen", "dep:console_error_panic_hook"]
# Python interoperability
python = ["dep:pyo3", "dep:numpy"]
# R integration for R ecosystem compatibility
r = []

[[bench]]
name = "comprehensive_benchmarks"
harness = false
